Implemented play-style 'simple'